--- a/server/package.json
+++ b/server/package.json
@@ -1,6 +1,18 @@
 {
   "dependencies": {
     "cors": "^2.8.5",
-    "express": "^4.21.1"
-  }
+    "dotenv": "^16.4.5",
+    "express": "^4.21.1",
+    "mongoose": "^8.7.2"
+  },
+  "scripts": {
+    "start": "node server.js"
+  },
+  "name": "server",
+  "version": "1.0.0",
+  "description": "HealthCare College Project",
+  "main": "server.js",
+  "devDependencies": {},
+  "author": "",
+  "license": "ISC"
 }
