--- a/server/package.json
+++ b/server/package.json
@@ -3,16 +3,23 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
+    "hbs": "^4.2.0",
     "mongoose": "^8.7.2"
   },
+
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js",
+    "dev" : "nodemon server.js"
   },
+
   "name": "server",
   "version": "1.0.0",
   "description": "HealthCare College Project",
   "main": "server.js",
-  "devDependencies": {},
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+
+  "devDependencies": {
+    "nodemon": "^3.1.7"
+  }
 }
