--- a/server/package.json
+++ b/server/package.json
@@ -1,24 +1,23 @@
 {
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
+    "express-async-handler": "^1.2.0",
     "hbs": "^4.2.0",
     "mongoose": "^8.7.2"
   },
-
   "scripts": {
     "start": "node server.js",
-    "dev" : "nodemon server.js"
+    "dev": "nodemon server.js"
   },
-
   "name": "server",
   "version": "1.0.0",
   "description": "HealthCare College Project",
   "main": "server.js",
   "author": "",
   "license": "ISC",
-
   "devDependencies": {
     "nodemon": "^3.1.7"
   }
